// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Page /courses/[id] > { course: <Data> } renders course info 1`] = `
<section
  class="section"
>
  
  <h1
    class="title"
  >
    TWENTY
  </h1>
  <h2
    class="subtitle"
  >
    DanceDanceRevolution A20
  </h2>
  <h2
    class="subtitle"
  >
    BPM 128-180
  </h2>
  <div
    class="content columns is-multiline"
  >
    
    <chart-info-stub
      chart="[object Object]"
      songid="I90bQ81P1blOPIdd9PPl6I9D8DQ1dIob"
    />
    <chart-info-stub
      chart="[object Object]"
      songid="I90bQ81P1blOPIdd9PPl6I9D8DQ1dIob"
    />
    <chart-info-stub
      chart="[object Object]"
      songid="I90bQ81P1blOPIdd9PPl6I9D8DQ1dIob"
    />
    <chart-info-stub
      chart="[object Object]"
      songid="I90bQ81P1blOPIdd9PPl6I9D8DQ1dIob"
    />
    
  </div>
  <div
    class="content columns is-multiline"
  >
    
    <chart-info-stub
      chart="[object Object]"
      songid="I90bQ81P1blOPIdd9PPl6I9D8DQ1dIob"
    />
    <chart-info-stub
      chart="[object Object]"
      songid="I90bQ81P1blOPIdd9PPl6I9D8DQ1dIob"
    />
    <chart-info-stub
      chart="[object Object]"
      songid="I90bQ81P1blOPIdd9PPl6I9D8DQ1dIob"
    />
    
  </div>
  
</section>
`;

exports[`Page /courses/[id] > { course: null } renders loading state 1`] = `
<section
  class="section"
>
  
  <transition-stub
    appear="false"
    css="true"
    name="fade"
    persisted="false"
  >
    <div
      class="o-load loading o-load--fullpage is-full-page"
    >
      <div
        class="o-load__overlay loading-overlay"
      />
      
      <span
        class="icon is-spin is-medium o-load__icon icon"
      >
        <i
          class="mdi mdi-loading mdi-36px"
        />
      </span>
      
    </div>
  </transition-stub>
  <h1
    class="title"
  >
    <div
      class="b-skeleton is-animated"
    >
      <div
        class="b-skeleton-item is-rounded"
      />
    </div>
  </h1>
  <h2
    class="subtitle"
  >
    <div
      class="b-skeleton is-animated"
    >
      <div
        class="b-skeleton-item is-rounded"
      />
    </div>
  </h2>
  <h2
    class="subtitle"
  >
    <div
      class="b-skeleton is-animated"
    >
      <div
        class="b-skeleton-item is-rounded"
      />
    </div>
  </h2>
  <div
    class="content columns is-multiline"
  >
    <div
      class="b-skeleton is-animated"
    >
      <div
        class="b-skeleton-item is-rounded"
      />
      <div
        class="b-skeleton-item is-rounded"
      />
      <div
        class="b-skeleton-item is-rounded"
      />
    </div>
  </div>
  
</section>
`;
